Fix styles for CampersDetailsFeatures component to adjust spacing and layout

--- a/src/components/BookingForm/BookingForm.module.css
+++ b/src/components/BookingForm/BookingForm.module.css
@@ -1,6 +1,5 @@
 .formWrapper {
   width: 641px;
-  height: 588px;
   border: 1px #dadde1 solid;
   border-radius: 10px;
   padding: 44px;
