--- a/src/components/CampersDetailsFeatures/CampersDetailsFeatures.module.css
+++ b/src/components/CampersDetailsFeatures/CampersDetailsFeatures.module.css
@@ -24,6 +24,7 @@
 
 .vehicleDetailsHeading {
   position: relative;
+  height: 24px;
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 48px;
@@ -41,15 +42,20 @@
 
 .detailsTable {
   width: 527px;
-  border-spacing: 0 16px;
-  border-collapse: separate;
+  border-collapse: collapse;
+}
+
+.detailsTableRow {
+  height: 24px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.detailsTableRow:last-child {
+  margin-bottom: 0;
 }
 
 .tableHeader {
   font-weight: 500;
-  text-align: left;
-}
-
-.tableData {
-  text-align: right;
 }
